fixed image link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class = "page-wrapper">
             </section>
-            <section class = "section" id = "name-section" background="assets/img/steezy.jpg">
+            <section class = "section" id = "name-section" background="../kjclin.github.io/assets/img/steezy.jpg">
                 <div class = "text" id = "name-text">
                     Hi, my name is Kristine Lin.
                 </div>
