Fixed background forreals
changed color too

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </section>
             <section class = "section" id = "name-section" background="../kjclin.github.io/assets/img/steezy.jpg">
                 <div class = "text" id = "name-text">
-                    Hi, my name is Kristine Lin.
+                    Hello, <br> my name is Kristine Lin.
                 </div>
             </section>
             <!-- Major Section -->
@@ -28,6 +28,12 @@
                     I also.... like to dance. 
                 </div>
             </section>
+        </div>
+        <div class = "halfsection">
+            
+        </div>
+        <div class = "halfsection">
+            
         </div>
     </body>
 </html>
