--- a/index.html
+++ b/index.html
@@ -22,18 +22,23 @@
                     I am currently majoring in Electrical Engineering and Computer Science at UC Berkeley.
                 </div>
             </section>
-            <!-- Random Fact Section -->
+            <!-- Dance section -->
             <section class = "section" id = "fact-section">
                 <div class = "text" id = "fact-text">
                     I also.... like to dance. 
                 </div>
             </section>
-        </div>
-        <div class = "halfsection">
-            
-        </div>
-        <div class = "halfsection">
-            
+            <!-- links section -->
+            <section class = "section" id = "links-section">
+                <div class = "text" id = "links-text">
+                    View my CS Portfolio
+                </div>
+                <br>
+                <br>
+                <div class = "text" id = "links-text">
+                    View my dance performances
+                </div>
+            </section>
         </div>
     </body>
 </html>
