Added new pages

--- a/Home.html
+++ b/Home.html
@@ -31,12 +31,12 @@
             <!-- links section -->
             <section class = "section" id = "links-section">
                 <div class = "text" id = "links-text">
-                    View my CS Portfolio
+                    <a href = "cs.html">View my CS Portfolio
                 </div>
                 <br>
                 <br>
                 <div class = "text" id = "links-text">
-                    View my dance performances
+                     <a href = "dance.html">View my dance performances
                 </div>
             </section>
         </div>
