--- a/cs.html
+++ b/cs.html
@@ -48,7 +48,7 @@
                 </div>
                 <br>
                 <div class = "text" id = "contacts-text">
-                    <a href="Home.html">Home
+                    <a href="index.html">Home
                 </div>
             </section>
         </div>
