--- a/cs.html
+++ b/cs.html
@@ -18,7 +18,7 @@
             </section>
             <!-- Major Section -->
             <section class = "section" id = "info-section">
-                <div class = "text" id = "major-text">
+                <div class = "text" id = "info-text">
                     Current Standing: Sophomore at UC Berkeley <br>
                     Expected graduation date: December 2017 <br>
                     Major: EECS (Electrical Engineering and Computer Science)
@@ -26,7 +26,7 @@
             </section>
             <!-- Dance section -->
             <section class = "section" id = "exp-section">
-                <div class = "text" id = "fact-text">
+                <div class = "text" id = "exp-text">
                     Experience: 
                     <ul>
                         <li>Software Engineering Intern at Ellie Mae (Summer 2015)
