--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class = "page-wrapper">
             </section>
-            <section class = "section" id = "name-section" background="../kjclin.github.io/assets/img/steezy.jpg">
+            <section class = "section" id = "name-section">
                 <div class = "text" id = "name-text">
                     Hello, <br> my name is Kristine Lin.
                 </div>
@@ -19,7 +19,11 @@
             <!-- Major Section -->
             <section class = "section" id = "major-section">
                 <div class = "text" id = "major-text">
-                    I am currently majoring in Electrical Engineering and Computer Science at UC Berkeley.
+                    <img class="img-circle" src="assets/img/headshot.jpg">
+                </div>
+                <br>
+                <div class = "text" id = "major-text">
+                    I am currently majoring in Electrical Engineering and Computer Science at UC Berkeley. YAY
                 </div>
             </section>
             <!-- Dance section -->
