Fixed image position whew

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <br>
                 <div class = "text" id = "major-text">
-                    I am currently majoring in Electrical Engineering and Computer Science at UC Berkeley. YAY
+                    I am currently majoring in Electrical Engineering and Computer Science at UC Berkeley.
                 </div>
             </section>
             <!-- Dance section -->
