Added dance stuff

--- a/cs.html
+++ b/cs.html
@@ -24,7 +24,7 @@
                     Major: EECS (Electrical Engineering and Computer Science)
                 </div>
             </section>
-            <!-- Dance section -->
+            <!-- Experience section -->
             <section class = "section" id = "exp-section">
                 <div class = "text" id = "exp-text">
                     Experience: 
@@ -35,16 +35,18 @@
                     </ul>
                 </div>
             </section>
+            <!-- Projects section -->
             <section class = "section" id = "projects-section">
                 <div class = "text" id = "fact-text">
                     Projects: 
-                    
+                    <br>
+                    Tetris (incomplete section)
                 </div>
             </section>
             <!-- links section -->
             <section class = "section" id = "contacts-section">
                 <div class = "text" id = "contacts-text">
-                    <a href="https://www.linkedin.com/in/kristine-lin-a145a2a4">V iew my LinkedIn
+                    <a href="https://www.linkedin.com/in/kristine-lin-a145a2a4">View my LinkedIn
                 </div>
                 <br>
                 <div class = "text" id = "contacts-text">
