--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Major Section -->
             <section class = "section" id = "major-section">
                 <div class = "text" id = "major-text">
-                    <img class="img-circle" src="assets/img/headshot.jpg">
+                    <a href = "cs.html"><img class="img-circle" src="assets/img/headshot.jpg">
                 </div>
                 <br>
                 <div class = "text" id = "major-text">
@@ -28,6 +28,9 @@
             </section>
             <!-- Dance section -->
             <section class = "section" id = "fact-section">
+                <div class = "text" id = "fact-text">
+                    <a href = "dance.html"><img class="img-circle" src="assets/img/danceshot.jpg">
+                </div>
                 <div class = "text" id = "fact-text">
                     I also.... like to dance. 
                 </div>
