--- a/dance.html
+++ b/dance.html
@@ -27,13 +27,20 @@
             <section class = "section" id = "timeline-section-1">
                 <div class = "text" id = "exp-text">
                     Spring 2016
-                    
+                    <br>
+                    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=JWIXC9PSuLI">
+                    </iframe>
                 </div>
             </section>
             <section class = "section" id = "timeline-section-2">
                 <div class = "text" id = "fact-text">
                     Fall 2015
                     <br>
+                    <video width="320" height="240" controls>
+                        <source src="movie.mp4" type="video/mp4">
+                         <source src="movie.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
             </section>
             <section class = "section" id = "timeline-section-3">
