Updated some stuff

--- a/cs.html
+++ b/cs.html
@@ -40,7 +40,7 @@
                 <div class = "text" id = "fact-text">
                     Projects: 
                     <br>
-                    Tetris (incomplete section)
+                    Tetris (incomplete section. images and descriptions coming soon)
                 </div>
             </section>
             <!-- links section -->
