trying to video bleh

--- a/dance.html
+++ b/dance.html
@@ -25,7 +25,7 @@
             </section>
             <!-- Dance section -->
             <section class = "section" id = "timeline-section-1">
-                <div class = "text" id = "exp-text">
+                <div class = "text" id = "timeline-text">
                     Spring 2016
                     <br>
                     <iframe width="420" height="315" src="https://www.youtube.com/watch?v=JWIXC9PSuLI">
@@ -33,7 +33,7 @@
                 </div>
             </section>
             <section class = "section" id = "timeline-section-2">
-                <div class = "text" id = "fact-text">
+                <div class = "text" id = "timeline-text">
                     Fall 2015
                     <br>
                     <video width="320" height="240" controls>
@@ -44,13 +44,13 @@
                 </div>
             </section>
             <section class = "section" id = "timeline-section-3">
-                <div class = "text" id = "fact-text">
+                <div class = "text" id = "timeline-text">
                     Spring 2015
                     <br>
                 </div>
             </section>
             <section class = "section" id = "timeline-section-4">
-                <div class = "text" id = "fact-text">
+                <div class = "text" id = "timeline-text">
                     Fall 2014
                     <br>
                 </div>
