--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             </section>
             <section class = "section" id = "name-section">
                 <div class = "text" id = "name-text">
-                    Hello, <br> my name is Kristine Lin.
+                    Hello, <br> My name is Kristine Lin. <br>
+                    Welcome to my website.
                 </div>
             </section>
             <!-- Major Section -->
