Added some styling stuff

--- a/cs.html
+++ b/cs.html
@@ -13,21 +13,25 @@
             </section>
             <section class = "section" id = "cs-intro-section">
                 <div class = "text" id = "cs-intro-text">
-                    Hello, <br> welcome to my cs portfolio
+                    <div class = "title-intro-text">Kristine Lin</div> <br>
+                    Portfolio
                 </div>
             </section>
             <!-- Major Section -->
             <section class = "section" id = "info-section">
                 <div class = "text" id = "info-text">
+                    <div class = "title-exp-text">Academics</div>
                     Current Standing: Sophomore at UC Berkeley <br>
                     Expected graduation date: December 2017 <br>
-                    Major: EECS (Electrical Engineering and Computer Science)
+                    Major: EECS (Electrical Engineering and Computer Science) <br>
+                    GPA: ______ <br>
+                    Regents' and Chancellor's Scholarship Recipient 
                 </div>
             </section>
             <!-- Experience section -->
             <section class = "section" id = "exp-section">
                 <div class = "text" id = "exp-text">
-                    Experience: 
+                    <div class = "title-exp-text">Work Experience: </div>
                     <ul>
                         <li>Software Engineering Intern at Ellie Mae (Summer 2015)
                         <li>Software Engineering Intern at Google (Summer 2016)
@@ -37,16 +41,22 @@
             </section>
             <!-- Projects section -->
             <section class = "section" id = "projects-section">
-                <div class = "text" id = "fact-text">
-                    Projects: 
-                    <br>
+                <div class = "text" id = "projects-text">
+                    <div class = "title-exp-text">Skills: </div>
+                    Java, C, C++, Python, HTML, Scheme, SQL, CSS, AngularJS
+                    <br> <br>
+                    <div class = "title-exp-text">Projects: </div>
                     Tetris (incomplete section. images and descriptions coming soon)
                 </div>
             </section>
             <!-- links section -->
             <section class = "section" id = "contacts-section">
                 <div class = "text" id = "contacts-text">
-                    <a href="https://www.linkedin.com/in/kristine-lin-a145a2a4">View my LinkedIn
+                    Contact me at kristinel@berkeley.edu
+                </div>
+                <br>
+                <div class = "text" id = "contacts-text">
+                    <a href="https://www.linkedin.com/in/kristine-lin-a145a2a4">View my LinkedIn </href>
                 </div>
                 <br>
                 <div class = "text" id = "contacts-text">
