Added videos finally

--- a/dance.html
+++ b/dance.html
@@ -27,32 +27,35 @@
             <section class = "section" id = "timeline-section-1">
                 <div class = "text" id = "timeline-text">
                     Spring 2016
-                    <br>
-                    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=JWIXC9PSuLI">
+                </div>
+                <br>
+                <div class = "video">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/JWIXC9PSuLI" frameborder="0" allowfullscreen>
                     </iframe>
                 </div>
             </section>
             <section class = "section" id = "timeline-section-2">
                 <div class = "text" id = "timeline-text">
                     Fall 2015
-                    <br>
-                    <video width="320" height="240" controls>
-                        <source src="movie.mp4" type="video/mp4">
-                         <source src="movie.ogg" type="video/ogg">
-                        Your browser does not support the video tag.
-                    </video>
+                </div>
+                <div class = "video">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/nT8IIQcMIVk" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
             <section class = "section" id = "timeline-section-3">
                 <div class = "text" id = "timeline-text">
                     Spring 2015
-                    <br>
+                </div>
+                <div class = "video">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/GIooUZHGmYs" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
             <section class = "section" id = "timeline-section-4">
                 <div class = "text" id = "timeline-text">
                     Fall 2014
-                    <br>
+                </div>
+                <div class = "video">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/QILYP9nG0E4" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
             <!-- links section -->
