--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
             </section>
             <!-- links section -->
             <section class = "section" id = "links-section">
+                <div class = "text" id = "non-links-text">
+                    Learn More about Me!
+                </div>
+                <br>   
                 <div class = "text" id = "links-text">
-                    <a href = "cs.html">View my CS Portfolio
+                    <a href = "cs.html">View my CS Portfolio </a>
                 </div>
                 <br>
-                <br>
                 <div class = "text" id = "links-text">
-                     <a href = "dance.html">View my dance performances
+                     <a href = "dance.html">View my dance performances </a>
                 </div>
             </section>
         </div>
