Took link section out

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
             </section>
             <!-- links section -->
             <section class = "section" id = "links-section">
-                <div class = "text" id = "non-links-text">
+                <!-- <div class = "text" id = "non-links-text">
                     Learn More about Me!
-                </div>
-                <br>   
+                </div> -->
                 <div class = "text" id = "links-text">
                     <a href = "cs.html">View my CS Portfolio </a>
                 </div>
