Changed Contact Text colors

--- a/cs.html
+++ b/cs.html
@@ -14,7 +14,7 @@
             <section class = "section" id = "cs-intro-section">
                 <div class = "text" id = "cs-intro-text">
                     <div class = "title-intro-text">Kristine Lin</div> <br>
-                    Portfolio
+                    Learn more about me!
                 </div>
             </section>
             <!-- Major Section -->
@@ -52,7 +52,7 @@
             <!-- links section -->
             <section class = "section" id = "contacts-section">
                 <div class = "text" id = "contacts-text">
-                    Contact me at kristinel@berkeley.edu
+                    Contact me at kristinel@berkeley.edu | <br> (510)371-2107
                 </div>
                 <br>
                 <div class = "text" id = "contacts-text">
