Videos with descriptions!

--- a/dance.html
+++ b/dance.html
@@ -29,6 +29,9 @@
                     Spring 2016
                 </div>
                 <br>
+                <div class = "text" id = "video-text">
+                    This semester has been one of the most meaningful semesters I have had. <br> This set is dedicated to our moms. We thanking them for all they have done for us and celebrate how far we have come. 
+                </div>
                 <div class = "video">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/JWIXC9PSuLI" frameborder="0" allowfullscreen>
                     </iframe>
@@ -38,6 +41,9 @@
                 <div class = "text" id = "timeline-text">
                     Fall 2015
                 </div>
+                <div class = "text" id = "video-text">
+                    I decided to branch out and joined a high energy group on campus called TrueLement. <br> This set's theme is "Spies".
+                </div>
                 <div class = "video">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/nT8IIQcMIVk" frameborder="0" allowfullscreen></iframe>
                 </div>
@@ -46,6 +52,9 @@
                 <div class = "text" id = "timeline-text">
                     Spring 2015
                 </div>
+                <div class = "text" id = "video-text">
+                    Spring 2015 was the first semester I decided to join a competitive team on campus. <br> This group decided to pull out a set that is Animal/Forest themed.
+                </div>
                 <div class = "video">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/GIooUZHGmYs" frameborder="0" allowfullscreen></iframe>
                 </div>
@@ -53,6 +62,9 @@
             <section class = "section" id = "timeline-section-4">
                 <div class = "text" id = "timeline-text">
                     Fall 2014
+                </div>
+                <div class = "text" id = "video-text">
+                    My first semester in college, C2 introduced me to the dance community at Berkeley and to urban dance. 
                 </div>
                 <div class = "video">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/QILYP9nG0E4" frameborder="0" allowfullscreen></iframe>
