Fixed description of projects

--- a/cs.html
+++ b/cs.html
@@ -20,8 +20,8 @@
             <!-- Major Section -->
             <section class = "section" id = "info-section">
                 <div class = "text" id = "info-text">
-                    <div class = "title-exp-text">Academics</div>
-                    Current Standing: Sophomore at UC Berkeley <br>
+                    <div class = "title-exp-text">Academics</div> <br>
+                    Current Standing: 2nd year at UC Berkeley <br>
                     Expected graduation date: December 2017 <br>
                     Major: EECS (Electrical Engineering and Computer Science) <br>
                     GPA: ______ <br>
@@ -46,7 +46,11 @@
                     Java, C, C++, Python, HTML, Scheme, SQL, CSS, AngularJS
                     <br> <br>
                     <div class = "title-exp-text">Projects: </div>
-                    Tetris (incomplete section. images and descriptions coming soon)
+                    <ul>
+                        <li>Tetris (incomplete section. images and descriptions coming soon)
+                        <li>MIPS assembler, linker, and assembly programming: Wrote a MIPS assembler, a linker, and wrote assembly codes to perform data manipulation on a MIPS processor.
+                        <li>Gitlet: Implemented a version control system mimicking some of the basic features of the version control system git. Emphasis on the use of Data Structures.
+                    </ul>
                 </div>
             </section>
             <!-- links section -->
