Changed description of dance page

--- a/dance.html
+++ b/dance.html
@@ -13,7 +13,7 @@
             </section>
             <section class = "section" id = "dance-intro-section">
                 <div class = "text" id = "dance-intro-text">
-                    Hello, <br> This page would be dedicated to my dance family.
+                    Hello, <br> This page is dedicated to my dance family.
                     <br>
                 </div>
             </section>
