--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- Major Section -->
             <section class = "section" id = "major-section">
                 <div class = "text" id = "major-text">
-                    <a href = "cs.html"><img class="img-circle" src="assets/img/headshot.jpg">
+                    <a href = "cs.html"><img class="img-circle" src="assets/img/headshot.jpg"> </a>
                 </div>
                 <br>
                 <div class = "text" id = "major-text">
@@ -30,7 +30,7 @@
             <!-- Dance section -->
             <section class = "section" id = "fact-section">
                 <div class = "text" id = "fact-text">
-                    <a href = "dance.html"><img class="img-circle" src="assets/img/danceshot.jpg">
+                    <a href = "dance.html"><img class="img-circle" src="assets/img/danceshot.jpg"> </a>
                 </div>
                 <div class = "text" id = "fact-text">
                     I also.... like to dance. 
